# rag-explained-with-code

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  reset_project.sh
data/: products.json
src/: __init__.py  data_manager.py  embeddings.py  llm_router.py  main.py  rag_pipeline.py  vector_db.py
tests/: __init__.py  test_env.py  test_openai_api.py  test_rag_pipeline.py
